# bazel_ts_simple_dep

./: README.md  WORKSPACE.bazel  package.json  tsconfig.json
main/: BUILD.bazel  buz.ts  main.ts
