package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "main",
    srcs = [
      "main.ts",
      "buz.ts"
    ],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        ":main",
    ],
    entry_point = ":main.ts",
    # install_source_map_support = False,
)
